<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.introfog.pie</groupId>
    <artifactId>root</artifactId>
    <packaging>pom</packaging>
    <version>1.2-SNAPSHOT</version>

    <modules>
        <module>core</module>
        <module>assessment</module>
        <module>test</module>
    </modules>

    <name>PIE-Core Root</name>
    <description>PIE-Core is a fast physics 2D engine library on Java.</description>
    <url>https://github.com/introfog/PIE2-Core</url>

    <scm>
        <connection>scm:git:git://github.com/introfog/PIE-Core.git</connection>
        <developerConnection>scm:git:ssh://github.com:introfog/PIE-Core.git</developerConnection>
        <url>http://github.com/introfog/PIE-Core/tree/master</url>
    </scm>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>owner</id>
            <name>Dmitry Chubrick</name>
            <email>chubrickdm@gmail.com</email>
            <timezone>UTC+3</timezone>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub introfog Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/introfog/PIE-Core</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <javadoc-additionalOptions/>
        <javadoc-link>https://docs.oracle.com/javase/11/docs/api/</javadoc-link>
        <javadoc.version>3.1.1</javadoc.version>
        <jacoco.version>0.8.6</jacoco.version>
        <sonarsource.scanner.version>3.7.0.1746</sonarsource.scanner.version>
    </properties>


    <build>
        <pluginManagement>
            <plugins>

                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${javadoc.version}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <failOnError>false</failOnError>
                        <source>11</source>
                        <detectLinks>true</detectLinks>
                        <additionalOptions>${javadoc-additionalOptions}</additionalOptions>
                        <links>
                            <link>${javadoc-link}</link>
                        </links>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M4</version>
                    <configuration>
                        <excludedGroups>com.github.introfog.pie.test.annotations.BenchmarkTest</excludedGroups>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonarsource.scanner.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <!-- Profile for SonarCloud coverage calculating -->
    <profiles>
        <profile>
            <id>coverage</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>